<resources>
    <string name="app_name">ترور</string>
    <string name="purchase">خرید</string>
    <string name="tower_action_create">ساخت</string>
    <string name="tower_action_watch">دیدبانی</string>
    <string name="tower_action_collect">سکه</string>
    <string name="continue_purchase">ادامه</string>
    <string name="refuse_purchase">انصراف</string>
    <string name="btn_telegram_contact">تلگرامِ ما</string>
    <string name="btn_logout">خروج از حساب کاربری</string>
    <string name="btn_rate">نظر دادن</string>
    <string name="btn_share">اشتراک گذاری با دوستان</string>
    <string name="empty_most_wanted_message_hunter">توی روز بیا اینجا چند تا از خون‌آشام‌های خفن رو بهت معرفی می کنیم که ترورشون کنی.</string>
    <string name="empty_most_wanted_message_vampire">شب بیا اینجا چند تا از شکارچی‌های خفن رو بهت معرفی می کنیم که ترورشون کنی. </string>
    <string name="title_activity_maps">ترور</string>
    <string name="title_activity_splash">ترور</string>
    <string name="title_activity_register">ترور</string>
    <string name="toast_finalize_real_purchase">خرید شما نهایی شد.</string>
    <string name="toast_cant_start_real_purchase">الان نمیشه، لطفا اپ رو ببندید و دوباره باز کنید.</string>
    <string name="toast_consume_real_purchase">در حال انجام خرید&#8230;</string>
    <string name="toast_add_tower_ok">تبریک، با موفقیت برج رو اضافه کردی</string>
    <string name="toast_add_tower_not_in_range">فقط می تونی نزدیک خودت برج رو بسازی</string>
    <string name="toast_add_tower_not_in_range_gps_disabled">لطفا GPS رو روشن کن و برج رو نزدیک خودت بساز</string>
    <string name="toast_add_tower_range_conflict">با یه برج دیگه تداخل داره</string>
    <string name="virtual_desc_heal">این آیتم کمک میکنه بعد از اینکه ترور شدی خودت رو درمان کنی و دوباره به زندگی ادامه بدی.</string>
    <string name="virtual_desc_attack_range">به صورت نرمال آدم‌هایی که توی ۲۰۰ متریت هستن رو می تونی ترور کنی، با خرید این آیتم می تونی افراد رو تا ۳۰۰ متری ترور کنی.</string>
    <string name="virtual_desc_sight_range">به صورت نرمال می تونی افرادی که توی فاصله‌ي ۴۰۰ متریت هستن رو ببینی، این آیتم کمک می کنه تا بازه‌ی ۸۰۰ متری اطرافت رو ببینی.</string>
    <string name="virtual_desc_invisible">به صورت نرمال وقتی آدم‌ها از کنارت رد میشن تو رو توی نقشه‌ی خودشون میبینن و می تونن ترورت کنن، خرید این آیتم کمک می کنه نامرئی بشی.</string>
    <string name="toast_please_try_again_later">مشکلی پیش اومده، لطفا چند لحظه دیگه دوباره امتحان کن</string>
    <string name="toast_collect_coin_ok">%d سکه از برج به خزانه اضافه شد.</string>
    <string name="toast_collect_coin_come_back_later">همه چی رو به راهه، یه ساعت دیگه بیا سکه‌ها رو جمع کن</string>
    <string name="toast_heal_ok">ایول درمان شدی</string>
    <string name="toast_heal_not_in_range">یکم باید به بیمارستان نزدیک تر بشی</string>
    <string name="toast_heal_not_needed">الان حالت خوبه، نیازی نیست :)</string>
    <string name="toast_general_not_needed">در حال حاضر این قابلیت رو داری، نیازی نیست دوباره بخریش.</string>
    <string name="toast_virtual_purchase_ok">مبارکا باشه، با موفقیت انجام شد.</string>
    <string name="toast_virtual_purchase_not_enough_money">متاسفانه سکه‌ی کافی برای خرید این آیتم نداری :(</string>
    <string name="toast_real_purchase_start">شروع خرید</string>
    <string name="toast_login_401">نام کاربری یا رمز عبور اشتباه است، لطفا دوباره امتحان کنید.</string>
    <string name="toast_validate_form_username">لطفا نام کاربری خود را وارد کنید</string>
    <string name="toast_validate_form_password">لطفا رمز عبور خود را وارد کنید</string>
    <string name="toast_validate_form_alphanumeric">برای نام کاربری فقط حروف انگلیسی و رقم استفاده کنید</string>
    <string name="toast_validate_form_choose_role">لطفا نوع شخصیت خود را انتخاب کنید</string>
    <string name="toast_register_duplicate_username">نام کاربری تکراری است، لطفا یکی دیگه انتخاب کن.</string>
    <string name="toast_attack_ok">ایول، یه مقدار از سکه هاش هم به تو رسید.</string>
    <string name="toast_attack_not_alive">این بدبخت که زنده نیست</string>
    <string name="toast_attack_not_in_range">باید بهش نزدیکتر بشی تا بتونی ترورش کنی</string>
    <string name="toast_attack_same_role">خودیا رو می خوای ترور کنی؟ :(</string>
    <string name="connection_lost_string">به نظر اینترنت نداری، لطفا اینترنتت رو روشن کن تا وارد بازی بشیم.</string>
    <string name="connection_lost_cancel">تلاش مجدد</string>
    <string name="connection_lost_wifi">روشن کردن wifi</string>
    <string name="connection_lost_data">روشن کردن 3G</string>
    <string name="connection_lost_message_turn_on_wifi">در حال روشن کردن wifi\nلطفا کمی صبر کنید\nحدود ۱۰ تا ۱۵ ثانیه طول می کشه</string>
    <string name="connection_lost_message_get_profile">در حال دریافت پروفایل&#8230;</string>
    <string name="toast_have_no_tower_to_collect_coin">برجی نداری که بخوای سکه هاش رو جمع کنی، اول یه برج بساز.</string>
    <string name="toast_have_no_tower_to_watch">اول باید برج بسازی بعد می تونی مدیریتشون کنی.</string>
    <string name="toast_join_tower_ok">به سلامتی، تبریک، الان یکی از مالکانِ برج هستی.</string>
    <string name="toast_join_tower_not_in_range">یه خورده باید به برج نزدیکتر بشی</string>
    <string name="toast_join_tower_not_my_role">این برجِ دشمنانِ توعه، نمی تونی عضو این بشی</string>
    <string name="toast_steal_tower_ok">به سلامتی، سکه‌های این برج به خزانه اضافه شد.</string>
    <string name="toast_steal_tower_not_in_range">یه خورده باید نزدیک تر بشی تا بتونی سکه‌ها رو غارت کنی :(</string>
    <string name="toast_steal_tower_no_coin">سکه ای در کار نیست که غارت کنی :(</string>
    <string name="choose_attack_message">لطفا یکی از پیام ها رو هم انتخاب کن</string>
    <string name="btn_save">ذخیره</string>
    <string name="btn_i_know">بلدم</string>
    <string name="enter_message">پیام را وارد کنید</string>
    <string name="btn_submit_message">ارسال</string>
    <string name="btn_new_user">کاربر ‌جدید</string>
    <string name="btn_registered_before">قبلا ثبت‌نام کرده‌ام</string>
    <string name="btn_register">ثبت نام</string>
    <string name="btn_attack">ترور</string>
    <string name="btn_steal_coins">غارت سکه‌ها</string>
    <string name="btn_join_tower_owners">اضافه شدن به اعضای برج</string>
    <string name="btn_show_tower_wall">دیوارِ برج</string>
    <string name="btn_confirm">خب!</string>
    <string name="toast_enter_message">خب یه چیزی بزن که ارسال کنم :|</string>
    <string name="intro_text_1">۱- دو دسته بازیکن روی نقشه هستن: خون‌آشام و شکارچی. خون‌آشام‌ها شبا می‌تونن شکارچی‌ها رو ترور کنن. اما روزا شکارچی‌ها رو نمی‌بینن و شکارچی‌ها می‌تونن ترورشون کنن. هم گروهی‌ها روی نقشه معلومن ولی نمی‌شه ترورشون کرد. در کل اونایی که می‌شه ترور کرد رنگشون قرمزه. </string>
    <string name="intro_text_2">۲-وقتی یکی رو می‌خوای ترور کنی باید یه پیغام براش بذاری و ترور رو بزنی. اگه زنده بود ۲۰٪ از سکه‌هاش بهت می‌رسه به علاوه ۱ امتیاز که توی لیست رتبه بندی تاثیر داره.</string>
    <string name="intro_text_3">۳-اگه روی نقشه یه برج دیدی دو حالت داره: یا مال شکارچی‌هاس یا خون‌آشاما. اگه مال گروه مخالفت بود می‌تونی سکه‌هاشو غارت کنی. البته فراموش نکن چه روز باشه چه شب، چه نامرئی باشی چه نه، از برج معلومی، و امکان داره همون موقع یه شکارچی از راه دور بهت حمله کنه. اگه برج خودیا بود، می‌تونی سه هزارتا سکه بدی و توش عضو بشی. اگه عضو شی روی دیوار برج می‌تونی برای بقیه پیغام بذاری.</string>
    <string name="intro_text_4">۴- برج ساختن چطوریه؟ اول اینکه داخل شعاع حمله‌ت(اون دایره سفیده دورت) می‌تونی یه برج بکاری. دوم اینکه شعاع حمله‌ی برج‌هات(دایره قرمزه‌ی دورش) نباید تداخل داشته باشن. سوم اینکه ساختن برج ۴۰۰۰تا سکه نیاز داره.</string>
    <string name="intro_text_5">۵- برج چیز خوبیه. در حالت عادی فقط شعاع ۲۰ متری اطرافتو می‌تونی ببینی و ترور کنی. اما وقتی برج داری می‌تونی هرجا که هستی محدوده‌ی اطراف برجتم ببینی و ترور کنی. </string>
    <string name="intro_text_6">۶- در ضمن برج خوبیای دیگه هم داره. ساعتی ۴ تا سکه تولید می‌کنه که باید حواست باشه زود به زود جمعش کنی. چون ممکنه یکی از تیم مخالف بیاد و غارتش کنه.</string>
    <string name="intro_text_7">۷- در نهایت هرچی بیشتر ترور کرده باشی یا برج غارت کرده باشی امتیاز بیشتری می‌گیری و توی لیست رتبه‌ها بالا میای.</string>
    <string name="intro_text_8">۸- اگه یکی ترورت کرد چی؟ باید بری نزدیک یه بیمارستان توی شهر و خودتو بدون هزینه درمان کنی. یا اینکه یه درمان کننده بگیری. یا صبر کنی تا روز یا شب بعدی که خود به خود زنده شی.</string>
    <string name="top_of_list_rank">رتبه</string>
    <string name="top_of_list_score">امتیاز</string>
    <string name="top_of_list_username">نام‌کاربری</string>
    <string name="caption_coin">سکه:</string>
    <string name="caption_score">امتیاز:</string>
    <string name="action_mission">ماموریت</string>
    <string name="action_tower">برج</string>
    <string name="caption_player_type_vampire">خون‌آشام</string>
    <string name="caption_player_type_hunter">شکارچی</string>
    <string name="caption_vampires_tower">برج خون‌آشام‌ها</string>
    <string name="caption_hunters_tower">برج‌ شکارچی‌ها</string>
    <string name="heal_you_are_dead">به نظر وقتی نبودی یه نفر زده داغونت کرده :(</string>
    <string name="heal_you_have_two_options">حالا ۲ راه داری</string>
    <string name="heal_you_can_go_to_hospital">می‌تونی بری نزدیک یه بیمارستان توی شهر و خودت رو درمان کنی</string>
    <string name="heal_you_can_buy_healer">می تونی با خرج %d سکه یه آمبولانس سفارش بدی بیاد همینجایی که هستی خوبت کنه</string>
    <string name="btn_go_to_hospital">میرم نزدیک بیمارستان</string>
    <string name="btn_buy_healer">سفارشِ آمبولانس</string>
    <string name="virtual_store_item_price">%d سکه</string>
    <string name="real_store_item_price">%d تومان</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="desc.avatar">avatar</string>
    <string name="color_zereshki">#4f0001</string>
    <string name="color_zereshki_trans1">#334f0001</string>
    <string name="color_gray">#EBE8E8</string>
    <string name="color_inner_circle_fill">#17FFFFFF</string>
    <string name="color_outer_circle_fill">#12FFFFFF</string>
    <string name="color_circle_stroke">#00FFFFFF</string>
    <string name="desc_nearest_sheep" formatted="true">الان یکی از گوسفند‌هایی که بهت نزدیک هست رو بهت معرفی می کنیم که بری ترورش کنی و در ازا %d سکه ازت کم میشه.</string>
    <string name="desc_nearest_player" formatted="true">الان یکی از دشمنات که بهت نزدیک هست رو بهت معرفی می کنیم که بری ترورش کنی و در ازا %d سکه ازت کم میشه.</string>
    <string name="desc_nearest_tower" formatted="true">الان یکی از برج‌هایی که بهت نزدیک هست رو بهت معرفی می کنیم که بری غارتش کنی و در ازا %d سکه ازت کم میشه.</string>
    <string name="template_notification_message" formatted="false">&#160; ازت %d سکه دزدید و گفت: &#160;</string>
    <string name="template_nearest_distance" formatted="false">فاصله: %d متر</string>
    <string name="message_share" formatted="false">ببین پاشو بیا این اپلیکیشن رو دانلود کن \n وقتی وارد شدی هم این کد رو بزن \n کد من : %s </string>
    <string name="icon.map">A</string>
    <string name="icon.ranklist">B</string>
    <string name="icon.notifications">C</string>
    <string name="icon.shop">D</string>
    <string name="icon.settings">E</string>
    <string name="icon.coin">F</string>
    <string name="icon.person">G</string>
    <string name="icon.info">H</string>
    <string-array name="player_type_keys">
        <item>نوع شخصیت</item>
        <item>خون‌آشام</item>
        <item>شکارچی</item>
    </string-array>
    <string-array name="player_type_values">
        <item>player type</item>
        <item>vampire</item>
        <item>hunter</item>
    </string-array>
</resources>