<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_lost_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancel_connection_lost_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_lost_cancel" />

        <Button
            android:id="@+id/button_enable_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_lost_wifi" />

        <Button
            android:id="@+id/button_enable_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_lost_data" />

    </LinearLayout>
</LinearLayout>