<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ir.ugstudio.vampire.views.custom.CustomEditText
            android:id="@+id/username"
            style="@style/register_edit_text"
            android:hint="@string/username" />

        <ir.ugstudio.vampire.views.custom.CustomEditText
            android:id="@+id/password"
            style="@style/register_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ir.ugstudio.vampire.views.custom.CustomButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</RelativeLayout>