<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/top_of_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space.small">

        <ir.ugstudio.vampire.views.custom.CustomTextView
            style="@style/rank_top_of_list"
            android:text="@string/top_of_list_score" />

        <ir.ugstudio.vampire.views.custom.CustomTextView
            style="@style/rank_top_of_list"
            android:text="@string/top_of_list_username" />

        <ir.ugstudio.vampire.views.custom.CustomTextView
            android:layout_width="@dimen/avatar.size.small"
            android:layout_height="wrap_content" />

        <ir.ugstudio.vampire.views.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space.medium"
            android:paddingRight="@dimen/space.medium"
            android:text="@string/top_of_list_rank" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ranklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_of_list" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>