<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/avatar_section"
            android:layout_width="@dimen/avatar.size.3xlarge"
            android:layout_height="@dimen/avatar.size.3xlarge"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/space.medium"
            android:layout_marginTop="@dimen/space.medium"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@id/viewpager_avatars"
                android:layout_width="@dimen/avatar.size.2xlarge"
                android:layout_height="@dimen/avatar.size.2xlarge"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator_avatars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="@dimen/space.small"
                    app:fillColor="@color/zereshki"
                    app:strokeColor="@color/zereshki" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar_section"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space.medium"
                android:layout_marginRight="@dimen/space.medium"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/space.small"
                    android:paddingTop="@dimen/space.small">

                    <ir.ugstudio.vampire.views.custom.CustomTextView
                        android:id="@+id/vampire_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/caption_player_type_vampire" />

                    <RadioButton
                        android:id="@+id/vampire_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/space.small"
                    android:paddingTop="@dimen/space.small">

                    <ir.ugstudio.vampire.views.custom.CustomTextView
                        android:id="@+id/hunter_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/caption_player_type_hunter" />

                    <RadioButton
                        android:id="@+id/hunter_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <ir.ugstudio.vampire.views.custom.CustomEditText
                android:id="@+id/username"
                style="@style/register_edit_text"
                android:hint="@string/username" />

            <ir.ugstudio.vampire.views.custom.CustomEditText
                android:id="@+id/password"
                style="@style/register_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ir.ugstudio.vampire.views.custom.CustomButton
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space.small"
                android:background="@drawable/special_button_zereshki"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>